updated some small ui stuff

--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ body {
     color: #FFFFFF; /* Strong contrast and readability */
 }
 .navbar, .btn-primary, .btn-success {
-    background-color: #706953; /* Updated Muted Green for navigation and button backgrounds */
+    background-color: #3A5A40; /* 706953 Updated Muted Green for navigation and button backgrounds */
     border: none;
     color: #FFFFFF;
 }
