--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,26 @@ body {
 }
 
 .hero-section {
-    background-color: #faf0e6; /* Unified appearance with the body */
+    background-color: #dfe7d8; /* Light sage green */
     color: #323232; /* Clarity and sophistication in text */
     padding: 50px 0;
     text-align: center;
 }
 
+.banner-section {
+    background-image: url('WhatsApp Image 2024-06-28 at 17.30.21.jpeg'); /* Add your hero image URL here */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #ffffff; /* White text for contrast */
+    height: 80vh; /* Set height to 80% of viewport height */
+    display: flex; /* Use flexbox to center content */
+    align-items: center; /* Vertically center content */
+    text-align: center;
+}
+
 .dynamic-section {
-    background-color: #FFFFFF; /* Changed to pure white for a cleaner look */
+    background-color: #f7e8d4; /* Soft beige */
     color: #323232; /* Maintaining the sophisticated dark grey text color */
     padding: 40px 0;
     text-align: center;
@@ -23,7 +35,7 @@ body {
 }
 
 .manifesto-section {
-    background-color: #FFFFFF; /* Changed to pure white for a cleaner look */
+    background-color: #faf0e6; /* Creamy beige */
     color: #323232; /* Maintaining the sophisticated dark grey text color */
     padding: 40px 0;
     font-size: 20px; /* Increasing the font size for better readability */
@@ -31,14 +43,14 @@ body {
 
 .feature-section {
     padding: 40px 0;
-    background-color: #faf0e6; /* Cohesion with the primary background color */
+    background-color: #f0ebe3; /* Light tan */
 }
 .feature-section .col-md-4 {
-    border: 2px solid #706953; /* Outlined box around each feature */
+    border: 2px solid #706953; /* Muted green for border */
     border-radius: 15px; /* Rounded corners for the boxes */
     padding: 40px; /* Internal spacing */
     margin: 10px; /* Space between each feature box */
-    background-color: #faf0e6; /* White background for the boxes to stand out */
+    background-color: #f0ebe3; /* Matching background for the boxes */
 }
 .feature-section h2, .feature-section p {
     color: #323232; /* Readability against the light background */
@@ -52,7 +64,7 @@ body {
     color: #FFFFFF; /* Strong contrast and readability */
 }
 .navbar, .btn-primary, .btn-success {
-    background-color: #3A5A40; /* 706953 Updated Muted Green for navigation and button backgrounds */
+    background-color: #3A5A40; /* Muted Green for navigation and button backgrounds */
     border: none;
     color: #FFFFFF;
 }
@@ -61,7 +73,7 @@ body {
 }
 
 .btn-primary {
-    background-color: #b99478; /* Updated color for primary action buttons */
+    background-color: #b99478; /* Earthy beige for primary action buttons */
     color: #FFFFFF; /* Clarity in text */
 }
 .btn-success {
@@ -88,19 +100,18 @@ a, a:hover {
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-background-color: #706953; /* Updated Muted Green for navigation and button backgrounds */
+background-color: #706953; /* Muted Green for navigation and button backgrounds */
 }
 
 .carousel-control-prev:hover,
 .carousel-control-next:hover {
-background-color: #b99478; /* Light Periwinkle for hover effect */
+background-color: #b99478; /* Earthy beige for hover effect */
 }
 
 #dynamicWord {
     font-weight: bold;
     color: #323232; /* Adjust the color to fit your design */
 }
-
 
 .icon-square {
     display: flex;
